# judges_map

./: .gitignore  README.md  courts.geojson  courts1.geojson  courts2.geojson  courts3.geojson  homes_data.geojson  map_sandbox.ipynb  map_updater.ipynb  pyproject.toml  requirements.txt  test.py  test_1basic.html  test_2.py  test_4filter.html  test_5filter.html  test_6courts.html  unique_courts.csv
.github/workflows/: update_map_data.yml
districts_map/: judicial_district_counties_crosswalk.xlsx
districts_map/US Attorney Districts Shapefile_20250504/: geo_export_955d985f-a3d6-4717-9f9a-d0c540b3e5c2.shx
districts_map/maps/: 1900_districts.sbx  1910_districts.sbn  1940_districts.shp.xml  1950_districts.shp.xml  1950_districts.shx  1960_districts.sbx  1970_districts.dbf  1980_districts.shx  2000_districts.shp.xml  2000_districts.shx
docs/: court_judges.json  courts.geojson  homes_data.geojson  index.html  judge_counts.json  judges.json
maps/shapefiles/: 1900_districts.sbn  1900_districts.shp.xml  1900_districts.shx  1910_districts.shp.xml  1910_districts.shx  1920_districts.dbf  1920_districts.sbn  1920_districts.sbx  1920_districts.shx  1930_districts.sbn  1930_districts.shp.xml  1930_districts.shx  1940_districts.dbf  1940_districts.sbn  1940_districts.shx  1950_districts.dbf  1950_districts.sbn  1960_districts.dbf  1960_districts.sbn  1970_districts.sbn  1970_districts.sbx  1980_districts.dbf  1980_districts.sbn  1980_districts.shp.xml  (+4 more)
old/: court_judges.json  courts.geojson  judge_counts.json  test_2basic.html  test_3filter.html  test_4filter.html
(+37 files in other folders)
