[tool.poetry]
name = "judgemap"
version = "0.1.0"
description = ""
authors = ["Matt Clark <matt.clark@cbsnews.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
geopandas = "^1.0.1"
psycopg = {extras = ["binary"], version = "^3.2.9"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
